--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   ],
   "author": "Hasib",
   "license": "MIT",
-  
   "dependencies": {
     "express": "^4.17.1",
     "lodash": "^4.17.21",
-    "mongoose": "^5.13.6"
+    "mongoose": "^5.13.6",
+    "slugify": "^1.6.0"
   }
 }
